# Trade-bot

./: .env.example  .gate57-payload.b64.part00  .gate57-payload.b64.part01  .gate57-payload.b64.part02  .gate57-payload.b64.part03  .gate57-payload.b64.part04  .gate58-payload.b64  .gate61-package.part00  .gate61-package.part01  .gate61-package.part02  .gate61-package.part03  .gate61-package.part04  .gate61-package.part05  .gate61-package.part06  .gate61-package.part07  .gate63-package.part00  .gate63-package.part01  .gate63-package.part02  .gate63-package.part03  .gate63-package.part04  .gate63-package.part05  .gate63v3-package.part00  .gate63v3-package.part01  .gate63v3-package.part02  .gate63v3-package.part03  .gate63v3-package.part04  .gate63v3-package.part05  .gate63v3-package.part06  .gate63v3-package.part07  .gate63v3-package.part08  .gate63v3-package.part09  .gate63v3-package.part10  .gate63v3-package.part11  .gate63v3-package.part12  .gate63v3-package.part13  .gate63v3-package.part14  .gate63v3-package.part15  .gate63v4-package.part00  .gate63v4-package.part01  .gate63v4-package.part02  (+36 more)
.phase2-bootstrap/: part-000  part-001  part-002  part-003  part-004  part-005  part-006  part-007  part-008  part-009  part-010  part-011  part-012  part-013  part-014  part-015  part-016  part-017  part-018  part-019  part-020  part-021  part-022  part-023  part-024  part-025  part-026  part-027  part-028  part-029  part-030  part-031  part-032  part-033  part-034  part-035  part-036  part-037  part-038  part-039
.sealed/: chunk-00.txt  chunk-01a.txt  chunk-01b.txt  chunk-02a.txt  chunk-02b.txt
.status/: chronos-finalizer.json  chronos-formatter.json  direct-pr-opener-note.txt  foundation-error.txt  foundation-fix-ready.txt  foundation-fix-validation.json  foundation-matrix-live.json  foundation-rerun.json  foundation-timing-error.txt  foundation-timing-materializer.json  foundation-timing-runs.json  main-phase2c-chain.json  open-foundation-pr.json  phase2c-publisher.json  phase3-publisher.json  phase3d-format-error.txt  phase3d-runs.json  phase3e-materializer-error.txt  phase3f-c1248-runs.json  phase3f-format-error.txt  phase3g-8749-status.json  phase3g-b311-status.json  phase3g-ea7-status.json  phase3g-errors.txt  phase3g-materializer-error.txt  phase3g-push-error.txt  phase3g-real-latest.json  phase3g-ruff-summary.txt  phase3g-run-tail.txt  phase3g-run2-error.txt  phase3g-run3-error.txt  phase3g-status.json  phase3h-live-error.txt  phase3h-live-error2.txt  phase3h-live-runs.json  phase3h-pilot-runs.json  phase3h-status.json  phase3i-exact-head.json  phase3i-materializer-error.txt  phase3i-materializer-runs.json  (+5 more)
configs/: btc_spot_4h.yaml  btc_spot_4h_phase2c_smoke.yaml  btc_spot_4h_smoke.yaml  feature_groups.example.json  okx_no_trade_observation_policy_v1.yaml  phase2c_btc_4h.yaml  phase2c_sources.yaml  phase2c_sources_authoritative.yaml  phase2c_sources_runtime.yaml  phase3a_robustness.yaml  phase3b_event_sources.yaml  phase3c_avalai_event_sources.yaml  phase3g_market_overlap.yaml  phase3h_candidate_sources.yaml
docs/: architecture.md  forward-test.md  foundation-models.md  foundation-screening-verdict.md  phase-2-methodology.md  phase-2b-data-sources.md  phase-2c-authority.md  phase-2c-execution.md  phase-2c-foundation-benchmark.md  phase-2c-real-benchmark.md  phase-3a-robustness-gate.md  phase-3a-robustness-result.md  phase-3b-prospective-events.md  phase-3c-avalai-provider.md  phase-3d-avalai-pilot.md  phase-3e-longitudinal-events.md  phase-3f-semantic-dataset.md  phase-3g-maturity-monitor.md  phase-3g-prospective-overlap-plan.md  phase-3g-prospective-overlap.md  phase-3h-source-diversity.md  phase-3i-state-lineage.md  platform-selection.md  release-gates.md
(+778 files in other folders)
